--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -17,10 +17,23 @@ body{height: 100vh;}
 .mainWrap .flexWrap section{display: inline-block; height: 100vh; width: 80%; position: relative;}
 .mainWrap .flexWrap section article{position: absolute; left:0; top: 0; width: 100%; height: 100%; font-size: 5em; transition: 0.5s;}
 .mainWrap .flexWrap section article:nth-of-type(1){}
-.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap{width: 90%; height: 90vh; border-radius: 10px; box-shadow: 0px 0px 50px grey; margin: 5vh auto 0;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap{width: 90%; height: 90vh; border-radius: 10px; box-shadow: 0px 0px 50px grey; margin: 5vh auto 0; overflow: hidden;}
 .mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap h1{font-size: 0.5em; padding: 3vh 0 1vh 5vh;}
-.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap p{font-size: 0.3em; padding: 0 0 0 5vh;}
-.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form{width: 90%; margin: 5vh auto 0; }
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap > p{font-size: 0.3em; padding: 0 0 0 5vh;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form{width: 100%; margin: 20vh auto 0; display: flex; justify-content: space-between; }
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q{width: 100%; padding: 0 10%}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q1{}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(1){box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.3); display: flex; border-radius: 100px; background-color: rgba(242,212,5,1);}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(1) .qicon{box-shadow: 5px 0 1px rgba(0, 0, 0, 0.3); display: inline-block; font-size: 0.5em; margin: 0 2% 0 0; padding:10px; border-radius: 100%; background: linear-gradient(90deg, rgba(242,212,5,1) 0%, rgba(242,159,5,1) 100%);}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(1) p{font-size: 0.5em; display: inline-block; padding: 1vh 0 0 0;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(2){height: 150px; width: 1000px; margin: 0 auto; text-align: center;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(2) label{font-size: 0.4em;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(2) label input{}
+.mainWrap .flexWrap section article:nth-of-type(1) button{position:absolute; font-size: 1.2em; border-radius: 100px; padding:0 27px; border: none; background: none; color: rgba(0, 0, 0, 0.3); transition: 0.5s;}
+.mainWrap .flexWrap section article:nth-of-type(1) button:hover{color: var(--color-aliceBlue); background-color: rgba(242,159,5,0.8); }
+.mainWrap .flexWrap section article:nth-of-type(1) button:nth-of-type(1){left:1%; top: 45vh;}
+.mainWrap .flexWrap section article:nth-of-type(1) button:nth-of-type(2){right:1%; top:45vh;}
+
 .mainWrap .flexWrap section article:nth-of-type(2){display: none;}
 .mainWrap .flexWrap section article:nth-of-type(3){display: none;}
 .mainWrap .flexWrap section article:nth-of-type(4){display: none;}
