--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -75,7 +75,7 @@
                 <button>></button>
             </article>
             <article>
-                <div id="map" style="width:100%;height:100vh;"></div>
+                <div id="map" style="width:80vw;height:100vh;"></div>
             </article>
             <article>SubContent 3</article>
             <article>SubContent 4</article>
