--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -3,13 +3,20 @@
 *{margin: 0; padding: 0; font-family: 'HGGGothicssi_40';}
 
 body{background: linear-gradient(90deg, rgba(242,192,5,1) 0%, rgba(242,159,5,1) 100%);}
+body{
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+body::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
+}
 
 .container{width: 100%; position: relative;}
 
 .container > div.logo{width:100%; height: 100px; position: fixed; background-color: black; opacity: 0.5;} 
 .logo > img{ display: inline-block;  width: 100px; height: 100px;}
 
-.container > .dot{color: var(--color-aliceBlue); position: fixed; right: 1%;}
+.container > .dot{color: var(--color-aliceBlue); position: fixed; right: 1%; cursor: pointer;}
 .container > .d1{top: 47vh}
 .container > .d2{top: 50vh}
 .container > .d3{top: 53vh}
@@ -32,8 +39,8 @@ section:nth-of-type(1){display: flex;}
 section:nth-of-type(2){display: flex;}
 section:nth-of-type(3){display: flex;}
 
-button{color: var(--color-aliceBlue); transition: 0.5s; position:absolute; left: calc(50% - 60px); top: 280vh; width: 120px; height: 50px; background-color: var(--color-darkOrange); border: none; border-radius: 50px; text-align: center;}
-button:hover{background-color: rgba(255, 255, 255, 0); color: black; font-size: 1.25em;}
-button a{text-decoration: none; font-size: 1.5em; }
+button{cursor: pointer; font-size: 2em;  color: var(--color-aliceBlue); transition: 0.5s; position:absolute; left: calc(50% - 90px); top: 280vh; width: 180px; height: 60px; background-color: var(--color-darkOrange); border: none; border-radius: 50px; text-align: center;}
+button:hover{background-color: rgba(255, 255, 255, 0); color: black; font-size: 2.25em;}
+button a{text-decoration: none;}
 
 
