--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -12,12 +12,12 @@ body{height: 100vh;}
 .mainWrap .flexWrap header nav{}
 .mainWrap .flexWrap header nav ul{}
 .mainWrap .flexWrap header nav ul li, .mainWrap .flexWrap footer ul li{font-size: 1.5em; font-weight: 600; padding: 3vh 0; transition: 0.5s; color: var(--color-aliceBlue);}
-.mainWrap .flexWrap header nav ul li:hover{background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); color: black; font-size: 2em;}
+.mainWrap .flexWrap header nav ul li:hover{background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); color: black; font-size: 1.7em;}
 
 .mainWrap .flexWrap section{display: inline-block; height: 100vh; width: 80%; position: relative;}
 .mainWrap .flexWrap section article{position: absolute; left:0; top: 0; width: 100%; height: 100%; font-size: 5em; transition: 0.5s;}
 .mainWrap .flexWrap section article:nth-of-type(1){}
-.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap{width: 90%; height: 90vh; border-radius: 10px; box-shadow: 0px 0px 50px grey; margin: 5vh auto 0; overflow: hidden;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap{min-width: 950px; width: 90%; height: 90vh; border-radius: 10px; box-shadow: 0px 0px 50px grey; margin: 5vh auto 0; overflow: hidden;}
 .mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap h1{font-size: 0.5em; padding: 3vh 0 1vh 5vh;}
 .mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap > p{font-size: 0.3em; padding: 0 0 0 5vh;}
 .mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form{width: 300%; margin: 20vh auto 0; display: flex;}
@@ -26,8 +26,8 @@ body{height: 100vh;}
 .mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(1){margin: 0 auto; width: 80%; box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.3); display: flex; border-radius: 100px; background-color: rgba(242,212,5,1);}
 .mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(1) .qicon{margin: 0; padding: 15px 0 0 0; text-align: center; width: 70px; height: 55px; box-shadow: 5px 0 1px rgba(0, 0, 0, 0.3); display: inline-block; font-size: 0.5em; border-radius: 100%; background: linear-gradient(90deg, rgba(242,212,5,1) 0%, rgba(242,159,5,1) 100%);}
 .mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(1) p{font-size: 0.5em; display: inline-block; padding: 15px 0 0 30px; }
-.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(2){height: 150px; width: 60%;  margin: 0 auto; text-align: center;}
-.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(2) label{font-size: 0.4em;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(2){height: 150px; width: 70%;  margin: 0 auto; text-align: center;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(2) label{display:inline-block ; font-size: 0.4em; width: 150px;}
 .mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(2) label input{}
 .mainWrap .flexWrap section article:nth-of-type(1) button{position:absolute; font-size: 1.2em; border-radius: 100px; padding:0 27px; border: none; background: none; color: rgba(0, 0, 0, 0.3); transition: 0.5s;}
 .mainWrap .flexWrap section article:nth-of-type(1) button:hover{color: var(--color-aliceBlue); background-color: rgba(242,159,5,0.8); }
@@ -41,6 +41,6 @@ body{height: 100vh;}
 .mainWrap .flexWrap footer{width: 10%; height: 100vh; background: linear-gradient(0deg, rgba(242,212,5,1) 0%, rgba(242,159,5,1) 100%); text-align: center;}
 .mainWrap .flexWrap footer ul{list-style: none;}
 .mainWrap .flexWrap footer ul li{}
-.mainWrap .flexWrap footer ul li:not(:nth-of-type(1)):hover{background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); color: black; font-size: 2em;}
+.mainWrap .flexWrap footer ul li:not(:nth-of-type(1)):hover{background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); color: black; font-size: 1.7em;}
 .mainWrap .flexWrap footer ul li:nth-of-type(1){}
 .mainWrap .flexWrap footer ul li:nth-of-type(2){}
