--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -64,9 +64,11 @@
                                 <p>주로 누구와 함께 하시나요?</p>
                             </div>
                             <div>
-                                <label><input type="radio" name="q1" value="실내">실내</label>
-                                <label><input type="radio" name="q1" value="실외">실외</label>
-                                <label><input type="radio" name="q1" value="상관없음">상관없음</label>
+                                <label><input type="radio" name="q1" value="실내">연인</label>
+                                <label><input type="radio" name="q1" value="실외">자녀</label>
+                                <label><input type="radio" name="q1" value="상관없음">친구</label>
+                                <label><input type="radio" name="q1" value="상관없음">가족</label>
+                                <label><input type="radio" name="q1" value="상관없음">혼자</label>
                             </div>
                         </div>
                     </form>
