--- a/src/main/resources/templates/members/signup.html
+++ b/src/main/resources/templates/members/signup.html
@@ -50,7 +50,7 @@
                         <p th:if="${#fields.hasErrors('userEmail')}" th:errors="*{userEmail}">Incorrect data</p>
                     </div>
                 
-                    <button type="submit">가입하귀</button>
+                    <button type="submit">가입하기</button>
                     <button type="button" th:onclick="|location.href='@{/Login}'|">뒤로가기</button>
                 </div>
             </div>
