--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/main.css">
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=echp7ietnz"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script type="text/javascript"
+            src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=echp7ietnz"></script>
 </head>
 <body>
 <div class="mainWrap">
@@ -28,16 +31,21 @@
                 <div class="surveyWrap">
                     <h1>당신에 취향이 궁금해요!</h1>
                     <p>선택하신 키워드를 토대로 일정을 생성합니다.</p>
-                    <form action="" method="">
+                    <form th:action="@{/Main}" th:object="${survey}" method="post">
                         <div class="q q1">
                             <div>
                                 <div class="qicon">Q1.</div>
                                 <p>당신은 평소 실내와 실외 중 무엇을 더 선호하시나요?</p>
                             </div>
+
                             <div>
-                                <label><input type="radio" name="q1" value="실내">실내</label>
-                                <label><input type="radio" name="q1" value="실외">실외</label>
-                                <label><input type="radio" name="q1" value="상관없음">상관없음</label>
+                                <label th:for="userWhere"><input type="radio" name="q1" th:field="*{userWhere}"
+                                                                 value="실내">실내</label>
+                                <label th:for="userWhere"><input type="radio" name="q1" th:field="*{userWhere}"
+                                                                 value="실외">실외</label>
+                                <label th:for="userWhere"><input type="radio" name="q1" th:field="*{userWhere}"
+                                                                 value="상관없음">상관없음</label>
+                                <p th:if="${#fields.hasErrors('userWhere')}" th:errors="*{userWhere}">Incorrect data</p>
                             </div>
                         </div>
                         <div class="q q1">
@@ -46,16 +54,28 @@
                                 <p>당신이 '나들이'를 떠올렸을 때 어떤 단어 떠오르나용?</p>
                             </div>
                             <div>
-                                <label><input type="radio" name="q2" value="">문화예술</label>
-                                <label><input type="radio" name="q2" value="">레포츠</label>
-                                <label><input type="radio" name="q2" value="">자연경관</label>
-                                <label><input type="radio" name="q2" value="">역사.유적</label>
-                                <label><input type="radio" name="q2" value="">맛집</label>
-                                <label><input type="radio" name="q2" value="">반려동물</label>
-                                <label><input type="radio" name="q2" value="">휴식.힐링</label>
-                                <label><input type="radio" name="q2" value="">공원</label>
-                                <label><input type="radio" name="q2" value="">카페</label>
-                                <label><input type="radio" name="q2" value="">쇼핑</label>
+                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}"
+                                                                value="문화예술">문화예술</label>
+                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}"
+                                                                value="레포츠">레포츠</label>
+                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}"
+                                                                value="자연경관">자연경관</label>
+                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}"
+                                                                value="역사.유적">역사.유적</label>
+                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}"
+                                                                value="맛집">맛집</label>
+                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}"
+                                                                value="반려동물">반려동물</label>
+                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}"
+                                                                value="휴식.힐링">휴식.힐링</label>
+                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}"
+                                                                value="공원">공원</label>
+                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}"
+                                                                value="카페">카페</label>
+                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}"
+                                                                value="쇼핑">쇼핑</label>
+                                <p th:if="${#fields.hasErrors('userWHAT')}" th:errors="*{userWHAT}">Incorrect
+                                    data</p></label>
                             </div>
                         </div>
                         <div class="q q1">
@@ -64,17 +84,20 @@
                                 <p>주로 누구와 함께 하시나요?</p>
                             </div>
                             <div>
-                                <label><input type="radio" name="q1" value="실내">연인</label>
-                                <label><input type="radio" name="q1" value="실외">자녀</label>
-                                <label><input type="radio" name="q1" value="상관없음">친구</label>
-                                <label><input type="radio" name="q1" value="상관없음">가족</label>
-                                <label><input type="radio" name="q1" value="상관없음">혼자</label>
+                                <label th:for="userWho"><input type="radio" name="q1" th:field="*{userWho}" value="연인">연인</label>
+                                <label th:for="userWho"><input type="radio" name="q1" th:field="*{userWho}" value="자녀">자녀</label>
+                                <label th:for="userWho"><input type="radio" name="q1" th:field="*{userWho}" value="친구">친구</label>
+                                <label th:for="userWho"><input type="radio" name="q1" th:field="*{userWho}" value="가족">가족</label>
+                                <label th:for="userWho"><input type="radio" name="q1" th:field="*{userWho}" value="혼자">혼자</label>
+                                <p th:if="${#fields.hasErrors('userWho')}" th:errors="*{userWho}">Incorrect data</p>
                             </div>
                         </div>
+                        <button type="submit">제출하기</button>
                     </form>
                 </div>
                 <button><</button>
                 <button>></button>
+
             </article>
             <article>
                 <div id="map" style="width:80vw;height:100vh;"></div>
@@ -86,7 +109,7 @@
             <ul>
                 <li sec:authentication="principal.username"></li>
                 <li th:onclick="|location.href='@{/}'|">첫 페이지</li>
-                <li onclick="location.href='home.html'" th:onclick="|location.href='@{/Logout}'|" >로그아웃</li>
+                <li onclick="location.href='home.html'" th:onclick="|location.href='@{/Logout}'|">로그아웃</li>
             </ul>
         </footer>
     </div>
@@ -94,66 +117,70 @@
 </body>
 </html>
 <script>
-    $(function(){
+    $(function () {
         /* navBar hover 이벤트 */
-        $('header > img').hover(function(){
+        $('header > img').hover(function () {
             $(this).attr({
-                src : '/img/logo2.png',
+                src: '/img/logo2.png',
             })
-            $(this).css({width : '120px', transition : '0.5s'});
-        }, function(){
+            $(this).css({width: '120px', transition: '0.5s'});
+        }, function () {
             $(this).attr({
-                src : '/img/logo3.png',
+                src: '/img/logo3.png',
             })
-            $(this).css({width : '100px', transition : '0.5s'});
+            $(this).css({width: '100px', transition: '0.5s'});
         })
 
         /* navBar click 이벤트 */
-        $('header nav ul li:nth-of-type(1)').on('click', function(){
-            $('article:nth-of-type(1)').css({display : 'inline-block', transition : '1s'});
-            $('article:nth-of-type(2)').css({display : 'none'});
-            $('article:nth-of-type(3)').css({display : 'none'});
-            $('article:nth-of-type(4)').css({display : 'none'});
+        $('header nav ul li:nth-of-type(1)').on('click', function () {
+            $('article:nth-of-type(1)').css({display: 'inline-block', transition: '1s'});
+            $('article:nth-of-type(2)').css({display: 'none'});
+            $('article:nth-of-type(3)').css({display: 'none'});
+            $('article:nth-of-type(4)').css({display: 'none'});
         })
 
-        $('header nav ul li:nth-of-type(2)').on('click', function(){
-            $('article:nth-of-type(1)').css({display : 'none'});
-            $('article:nth-of-type(2)').css({display : 'inline-block'});
-            $('article:nth-of-type(3)').css({display : 'none'});
-            $('article:nth-of-type(4)').css({display : 'none'});
+        $('header nav ul li:nth-of-type(2)').on('click', function () {
+            $('article:nth-of-type(1)').css({display: 'none'});
+            $('article:nth-of-type(2)').css({display: 'inline-block'});
+            $('article:nth-of-type(3)').css({display: 'none'});
+            $('article:nth-of-type(4)').css({display: 'none'});
         })
 
-        $('header nav ul li:nth-of-type(3)').on('click', function(){
-            $('article:nth-of-type(1)').css({display : 'none'});
-            $('article:nth-of-type(2)').css({display : 'none'});
-            $('article:nth-of-type(3)').css({display : 'inline-block'});
-            $('article:nth-of-type(4)').css({display : 'none'});
+        $('header nav ul li:nth-of-type(3)').on('click', function () {
+            $('article:nth-of-type(1)').css({display: 'none'});
+            $('article:nth-of-type(2)').css({display: 'none'});
+            $('article:nth-of-type(3)').css({display: 'inline-block'});
+            $('article:nth-of-type(4)').css({display: 'none'});
         })
 
-        $('header nav ul li:nth-of-type(4)').on('click', function(){
-            $('article:nth-of-type(1)').css({display : 'none'});
-            $('article:nth-of-type(2)').css({display : 'none'});
-            $('article:nth-of-type(3)').css({display : 'none'});
-            $('article:nth-of-type(4)').css({display : 'inline-block'});
+        $('header nav ul li:nth-of-type(4)').on('click', function () {
+            $('article:nth-of-type(1)').css({display: 'none'});
+            $('article:nth-of-type(2)').css({display: 'none'});
+            $('article:nth-of-type(3)').css({display: 'none'});
+            $('article:nth-of-type(4)').css({display: 'inline-block'});
         })
 
         /* 사전설문조사 페이지 이동 이벤트 */
         var distance = 0;
-        $('section article:nth-of-type(1) button:nth-of-type(1)').on('click', function(){
-            if(distance >= 0){return;}
+        $('section article:nth-of-type(1) button:nth-of-type(1)').on('click', function () {
+            if (distance >= 0) {
+                return;
+            }
             distance += 33.3333333;
             $('section article:nth-of-type(1) .surveyWrap form').css({
-                transform : 'translateX(' + distance + '%)',
-                transition : '0.5s',
+                transform: 'translateX(' + distance + '%)',
+                transition: '0.5s',
             })
             console.log('translateX(' + distance + '%)');
         })
-        $('section article:nth-of-type(1) button:nth-of-type(2)').on('click', function(){
-            if(distance <= -66.5){return;}
+        $('section article:nth-of-type(1) button:nth-of-type(2)').on('click', function () {
+            if (distance <= -66.5) {
+                return;
+            }
             distance -= 33.3333333;
             $('section article:nth-of-type(1) .surveyWrap form').css({
-                transform : 'translateX(' + distance + '%)',
-                transition : '0.5s',
+                transform: 'translateX(' + distance + '%)',
+                transition: '0.5s',
             })
             console.log('translateX(' + distance + '%)');
         })
@@ -173,7 +200,7 @@
         map: Inhatc
     });
 
-    naver.maps.Event.addListener(Inhatc, 'click', function(e) { //클릭한 지점으로 마커 옮기기
+    naver.maps.Event.addListener(Inhatc, 'click', function (e) { //클릭한 지점으로 마커 옮기기
         marker.setPosition(e.coord);
     });
 
@@ -191,7 +218,7 @@
         content: contentString
     });
 
-    naver.maps.Event.addListener(marker, "click", function(e) { //클릭할때마다 정보창 열고 닫기
+    naver.maps.Event.addListener(marker, "click", function (e) { //클릭할때마다 정보창 열고 닫기
         if (infowindow.getMap()) {
             infowindow.close();
         } else {
