main.html파일 label, input 링크 작업

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -39,9 +39,9 @@
                                 <p>당신은 평소 실내와 실외 중 무엇을 더 선호하시나요?</p>
                             </div>
                             <div>
-                                <label th:for="userWhere"><input type="radio" name="q1" th:field="*{userWhere}" value="실내">실내</label>
-                                <label th:for="userWhere"><input type="radio" name="q1" th:field="*{userWhere}" value="실외">실외</label>
-                                <label th:for="userWhere"><input type="radio" name="q1" th:field="*{userWhere}" value="상관없음">상관없음</label>
+                                <label><input type="radio" name="q1" th:field="*{userWhere}" value="실내">실내</label>
+                                <label><input type="radio" name="q1" th:field="*{userWhere}" value="실외">실외</label>
+                                <label><input type="radio" name="q1" th:field="*{userWhere}" value="상관없음">상관없음</label>
                             </div>
                         </div>
                         <div class="q q1">
@@ -51,10 +51,10 @@
                                 <p>당신의 평소 나들이 분위기는 어떤가요?</p>
                             </div>
                             <div>
-                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}" value="문화예술">나들이는 뭐니뭐니해도 활동적인 것이 짱이죠!</label>
-                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}" value="레포츠">배움이 있는 나들이가 좋아요</label>
-                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}" value="자연경관">나들이는 저에게 힐링하는 시간이에요~</label>
-                                <label th:for="userWHAT"><input type="radio" name="q2" th:field="*{userWHAT}" value="역사.유적">입이 즐거운 나들이가 최고에요</label>
+                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="문화예술">나들이는 뭐니뭐니해도 활동적인 것이 짱이죠!</label>
+                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="레포츠">배움이 있는 나들이가 좋아요</label>
+                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="자연경관">나들이는 저에게 힐링하는 시간이에요~</label>
+                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="역사.유적">입이 즐거운 나들이가 최고에요</label>
                             </div>
                         </div>
                         <div class="q q1">
@@ -64,11 +64,11 @@
                                 <p>주로 누구와 함께 하시나요?</p>
                             </div>
                             <div>
-                                <label th:for="userWho"><input type="radio" name="q1" th:field="*{userWho}" value="연인">연인</label>
-                                <label th:for="userWho"><input type="radio" name="q1" th:field="*{userWho}" value="자녀">자녀</label>
-                                <label th:for="userWho"><input type="radio" name="q1" th:field="*{userWho}" value="친구">친구</label>
-                                <label th:for="userWho"><input type="radio" name="q1" th:field="*{userWho}" value="가족">가족</label>
-                                <label th:for="userWho"><input type="radio" name="q1" th:field="*{userWho}" value="혼자">혼자</label>
+                                <label><input type="radio" name="q1" th:field="*{userWho}" value="연인">연인</label>
+                                <label><input type="radio" name="q1" th:field="*{userWho}" value="자녀">자녀</label>
+                                <label><input type="radio" name="q1" th:field="*{userWho}" value="친구">친구</label>
+                                <label><input type="radio" name="q1" th:field="*{userWho}" value="가족">가족</label>
+                                <label><input type="radio" name="q1" th:field="*{userWho}" value="혼자">혼자</label>
                                 <button type="submit">제출하기</button>
                             </div>
                         </div>
