--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -32,8 +32,8 @@
                     <h1>당신에 취향이 궁금해요!</h1>
                     <p>선택하신 키워드를 토대로 일정을 생성합니다.</p>
                     <form th:action="@{/Main}" th:object="${survey}" method="post">
+
                         <div class="q q1">
-                            <p class="errText" th:if="${#fields.hasErrors('userWhere')}" th:errors="*{userWhere}">Incorrect data</p>  <!-- 에러구문 -->
                             <div>
                                 <div class="qicon">Q1.</div>
                                 <p>당신은 평소 실내와 실외 중 무엇을 더 선호하시나요?</p>
@@ -45,20 +45,18 @@
                             </div>
                         </div>
                         <div class="q q1">
-                            <p class="errText" th:if="${#fields.hasErrors('userWHAT')}" th:errors="*{userWHAT}">Incorrect data</p></label>
                             <div>
                                 <div class="qicon">Q2.</div>
                                 <p>당신의 평소 나들이 분위기는 어떤가요?</p>
                             </div>
                             <div>
-                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="문화예술">나들이는 뭐니뭐니해도 활동적인 것이 짱이죠!</label>
-                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="레포츠">배움이 있는 나들이가 좋아요</label>
-                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="자연경관">나들이는 저에게 힐링하는 시간이에요~</label>
-                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="역사.유적">입이 즐거운 나들이가 최고에요</label>
+                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="활동">나들이는 활동적인 것이 짱이죠!</label>
+                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="배움">배움이 있는 나들이가 좋아요</label>
+                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="힐링">나들이는 저에게 힐링하는 시간이에요~</label>
+                                <label><input type="radio" name="q2" th:field="*{userWHAT}" value="맛기행">입이 즐거운 나들이가 최고에요</label>
                             </div>
                         </div>
                         <div class="q q1">
-                            <p class="errText" th:if="${#fields.hasErrors('userWho')}" th:errors="*{userWho}">Incorrect data</p>
                             <div>
                                 <div class="qicon">Q3.</div>
                                 <p>주로 누구와 함께 하시나요?</p>
@@ -69,14 +67,18 @@
                                 <label><input type="radio" name="q1" th:field="*{userWho}" value="친구">친구</label>
                                 <label><input type="radio" name="q1" th:field="*{userWho}" value="가족">가족</label>
                                 <label><input type="radio" name="q1" th:field="*{userWho}" value="혼자">혼자</label>
-                                <button type="submit">제출하기</button>
                             </div>
+                        </div>
+                        <div class="q q1">
+                            <div>
+                                <p>설문조사에 참여해주셔서 감사합니다~^^</p>
+                                <p>선택한 답변을 바꾸고 싶으시다면 설문조사를 다시 실시해주세요!</p>
+                            </div>
+                            <img src="/img/like.png">
+                            <button type="submit">제출하기</button>
                         </div>
                     </form>
                 </div>
-                <button><</button>
-                <button>></button>
-
             </article>
             <article>
                 <div id="map" style="width:80vw;height:100vh;"></div>
@@ -141,25 +143,15 @@
 
         /* 사전설문조사 페이지 이동 이벤트 */
         var distance = 0;
-        $('section article:nth-of-type(1) button:nth-of-type(1)').on('click', function () {
-            if (distance >= 0) {
-                return;
-            }
-            distance += 33.3333333;
-            $('section article:nth-of-type(1) .surveyWrap form').css({
-                transform: 'translateX(' + distance + '%)',
-                transition: '0.5s',
-            })
-            console.log('translateX(' + distance + '%)');
-        })
-        $('section article:nth-of-type(1) button:nth-of-type(2)').on('click', function () {
+        var $point = $('.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form .q div:nth-of-type(2) label');
+        $($point).on('click', function () {
             if (distance <= -66.5) {
                 return;
             }
-            distance -= 33.3333333;
+            distance -= 12.5;
             $('section article:nth-of-type(1) .surveyWrap form').css({
                 transform: 'translateX(' + distance + '%)',
-                transition: '0.5s',
+                transition: '1s',
             })
             console.log('translateX(' + distance + '%)');
         })
