--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -11,7 +11,7 @@
     <div class="surveyWrap">
         <h1>당신에 취향이 궁금해요!</h1>
         <p>선택하신 키워드를 토대로 일정을 생성합니다.</p>
-        <form th:action="@{/Main}" th:object="${survey}" method="post">
+        <form th:action="@{/Survey}" th:object="${survey}" method="post">
             <div class="q q1">
                 <div>
                     <div>Q1.</div>
