main페이지 오른쪽 navBar에 "재설문" list 추가

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -35,6 +35,7 @@
                 <li sec:authentication="principal.username"></li>
                 <li th:onclick="|location.href='@{/}'|">첫 페이지</li>
                 <li onclick="location.href='home.html'" th:onclick="|location.href='@{/Logout}'|">로그아웃</li>
+                <li>재설문</li>
             </ul>
         </footer>
     </div>
