재설문 url매핑 및 alert창 추가

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -36,7 +36,7 @@
                 <li sec:authentication="principal.username"></li>
                 <li th:onclick="|location.href='@{/}'|">첫 페이지</li>
                 <li onclick="location.href='home.html'" th:onclick="|location.href='@{/Logout}'|">로그아웃</li>
-                <li>재설문</li>
+                <li onclick="reSurvey()">재설문</li>
             </ul>
         </footer>
     </div>
@@ -103,6 +103,11 @@
         })
     })
 
+    /* 재설문 페이지로 이동 */
+    function reSurvey() {
+        alert("재설문 화면으로 이동합니다.");
+        window.location.href = "/SurveyForm";
+    }
 
     /* 네이버 지도 API */
     var mapOptions = { //지도 옵션 설정
