재설문 페이지 추가 및 이동 경로 수정

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -112,7 +112,7 @@
 
         if(answer == true){
             alert("재설문 화면으로 이동합니다.");
-            window.location.href = "/SurveyForm";
+            window.location.href = "/reSurveyForm";
         }
     }
 
