--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -33,3 +33,26 @@ body{height: 100vh;}
     70% {transform: rotate(-12deg);}
     100% {top: -24%;}
 }
+
+.loader{
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: rgba(0,0,0,0.7);
+  opacity: 1;
+  transition: 0.5s ease;
+}
+
+.loader div{
+    position:absolute;
+    left: calc(50% - 100px); top: calc(50% - 100px);
+}
+.loader div p, .ball{position: absolute;}
+.loader div p {
+    left: 50px;
+    top: 150px;
+    font-size: 1.75em;
+    color: var(--color-aliceBlue);
+}
