일부 article 문구 삭제

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -35,7 +35,7 @@
             <article>
                 <div id="map" style="width:80vw;height:100vh;"></div>
             </article>
-            <article>SubContent 2
+            <article>
                 <span class="thData" th:text="${data}"></span>
             </article>
             <article>SubContent 3</article>
